migration to spring boot 3.1